# legal-st

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: bert-base-stage2-hf.yaml  bert-tiny-stage2-hf.yaml
scripts/: evaluate_retrieval.py  smoke_test.py  train_embedding.py
src/legal_st/: config.py  data.py  evaluation.py  modeling.py  retrieval.py  utils.py
